sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: type mismatch;
 found   : Int(0)
 required: Boolean
    a=0
      ^